fix text white-space wrap for message body

--- a/src/pm/message_list.css
+++ b/src/pm/message_list.css
@@ -24,7 +24,8 @@
 }
 
 .message_list p {
-    margin: 0.25rem 0 0;
+  margin: 0.25rem 0 0;
+  white-space: pre-line;
 }
 
 .message_list .flex_right {
